--- a/.github/workflows/chef-unit-tests.yml
+++ b/.github/workflows/chef-unit-tests.yml
@@ -11,8 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby-version: ['2.7', '3.0', '3.1']
-        chef-version: ['16', '17', '18']
+        ruby-version: ['3.1', '3.2']
+        chef-version: ['17', '18']
     
     steps:
     - uses: actions/checkout@v3
@@ -61,7 +61,7 @@ jobs:
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
-        ruby-version: '3.1'
+        ruby-version: '3.2'
         bundler-cache: true
     
     - name: Install dependencies
@@ -81,7 +81,7 @@ jobs:
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
-        ruby-version: '2.7'
+        ruby-version: '3.1'
         bundler-cache: true
     
     - name: Install dependencies
