--- a/.github/workflows/test-alert-rules.yml
+++ b/.github/workflows/test-alert-rules.yml
@@ -35,24 +35,30 @@ jobs:
         sudo dpkg -i chef-workstation_23.5.1040-1_amd64.deb
         echo 'eval "$(chef shell-init bash)"' >> ~/.bashrc
         source ~/.bashrc
+        # Accept Chef license
+        sudo env CHEF_LICENSE=accept-silent chef -v
     
     - name: Verify Chef installation
       run: |
+        export CHEF_LICENSE=accept-silent
         chef --version
         chef exec ruby --version
     
     - name: Install cookbook dependencies
       run: |
+        export CHEF_LICENSE=accept-silent
         chef exec bundle install || true
         chef exec berks install || true
     
     - name: Run alert_rules unit tests
       run: |
+        export CHEF_LICENSE=accept-silent
         chef exec rspec spec/unit/recipes/alert_rules_spec.rb --format documentation --color
     
     - name: Generate test report
       if: always()
       run: |
+        export CHEF_LICENSE=accept-silent
         chef exec rspec spec/unit/recipes/alert_rules_spec.rb --format html --out rspec_results.html || true
     
     - name: Upload test results
