--- a/.github/workflows/chef-unit-tests.yml
+++ b/.github/workflows/chef-unit-tests.yml
@@ -35,9 +35,9 @@ jobs:
     - name: Install Chef
       run: |
         export CHEF_LICENSE=accept-silent
-        /opt/chef-workstation/embedded/bin/gem install chef -v "~> ${{ matrix.chef-version }}.0"
-        /opt/chef-workstation/embedded/bin/gem install chefspec
-        /opt/chef-workstation/embedded/bin/gem install berkshelf
+        gem install chef -v "~> ${{ matrix.chef-version }}.0"
+        gem install chefspec
+        gem install berkshelf
       env:
         CHEF_LICENSE: accept-silent
 
@@ -87,8 +87,8 @@ jobs:
     
     - name: Install dependencies
       run: |
-        /opt/chef-workstation/embedded/bin/gem install cookstyle
-        /opt/chef-workstation/embedded/bin/gem install chef
+        gem install cookstyle
+        gem install chef
     
     - name: Run Cookstyle
       run: cookstyle --display-cop-names --extra-details
@@ -107,8 +107,8 @@ jobs:
     
     - name: Install dependencies
       run: |
-        /opt/chef-workstation/embedded/bin/gem install foodcritic
-        /opt/chef-workstation/embedded/bin/gem install chef
+        gem install foodcritic
+        gem install chef
     
     - name: Run Foodcritic
       run: foodcritic . -f any -t ~FC121 -t ~FC034
