--- a/.github/workflows/chef-unit-tests.yml
+++ b/.github/workflows/chef-unit-tests.yml
@@ -35,9 +35,9 @@ jobs:
     - name: Install Chef
       run: |
         export CHEF_LICENSE=accept-silent
-        gem install chef -v "~> ${{ matrix.chef-version }}.0"
-        gem install chefspec
-        gem install berkshelf
+        /opt/chef-workstation/embedded/bin/gem install chef -v "~> ${{ matrix.chef-version }}.0"
+        /opt/chef-workstation/embedded/bin/gem install chefspec
+        /opt/chef-workstation/embedded/bin/gem install berkshelf
       env:
         CHEF_LICENSE: accept-silent
 
