--- a/.github/workflows/chef-unit-tests.yml
+++ b/.github/workflows/chef-unit-tests.yml
@@ -36,9 +36,11 @@ jobs:
       run: |
         export CHEF_LICENSE=accept-silent
         export PATH=/opt/chef-workstation/bin:/opt/chef-workstation/embedded/bin:$PATH
+        
         /opt/chef-workstation/embedded/bin/gem install chef -v "~> ${{ matrix.chef-version }}.0"
         /opt/chef-workstation/embedded/bin/gem install chefspec
         /opt/chef-workstation/embedded/bin/gem install berkshelf
+        /opt/chef-workstation/embedded/bin/bundle install
       env:
         CHEF_LICENSE: accept-silent
 
@@ -62,6 +64,7 @@ jobs:
       run: |
         export CHEF_LICENSE=accept-silent
         export PATH=/opt/chef-workstation/bin:/opt/chef-workstation/embedded/bin:$PATH
+        /opt/chef-workstation/embedded/bin/bundle install
         /opt/chef-workstation/bin/chef exec rspec spec/unit/recipes/alert_rules_spec.rb --format documentation --color
     
     - name: Run all unit tests
