--- a/.github/workflows/chef-unit-tests.yml
+++ b/.github/workflows/chef-unit-tests.yml
@@ -12,40 +12,27 @@ jobs:
     
     steps:
     - uses: actions/checkout@v3
-        
-    - name: Install Chef Workstation
-      run: |
-        wget https://packages.chef.io/files/stable/chef-workstation/23.5.1040/ubuntu/22.04/chef-workstation_23.5.1040-1_amd64.deb
-        sudo dpkg -i chef-workstation_23.5.1040-1_amd64.deb
 
-    - name: Install Chef
-      run: |
-        export CHEF_LICENSE=accept-silent
-        export PATH=/opt/chef-workstation/bin:/opt/chef-workstation/embedded/bin:$PATH
-        sudo apt-get -y install build-essential ruby-dev
-        
-        /opt/chef-workstation/embedded/bin/bundle install
-      env:
-        CHEF_LICENSE: accept-silent
+    - uses: ruby/setup-ruby@v1
+      with:
+        ruby-version: '3.1'
+        bundler-cache: true # runs 'bundle install' and caches installed gems automatically
         
     - name: Run RuboCop (linting)
       run: |
         export CHEF_LICENSE=accept-silent
-        export PATH=/opt/chef-workstation/bin:/opt/chef-workstation/embedded/bin:$PATH
-        /opt/chef-workstation/bin/chef exec rubocop --display-cop-names --extra-details
+        chef exec rubocop --display-cop-names --extra-details
       continue-on-error: true
     
     - name: Run ChefSpec unit tests
       run: |
         export CHEF_LICENSE=accept-silent
-        export PATH=/opt/chef-workstation/bin:/opt/chef-workstation/embedded/bin:$PATH
-        /opt/chef-workstation/bin/chef exec rspec spec/unit/recipes/alert_rules_spec.rb --format documentation --color
+        chef exec rspec spec/unit/recipes/alert_rules_spec.rb --format documentation --color
     
     - name: Run all unit tests
       run: |
         export CHEF_LICENSE=accept-silent
-        export PATH=/opt/chef-workstation/bin:/opt/chef-workstation/embedded/bin:$PATH
-        /opt/chef-workstation/bin/chef exec rspec --format documentation --color
+        chef exec rspec --format documentation --color
     
     - name: Upload test results
       if: always()
