--- a/.github/workflows/chef-unit-tests.yml
+++ b/.github/workflows/chef-unit-tests.yml
@@ -17,7 +17,12 @@ jobs:
       with:
         ruby-version: '3.1'
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-        
+
+    - name: Run RuboCop (linting)
+      run: |
+        export CHEF_LICENSE=accept-silent
+        bundle install
+
     - name: Run RuboCop (linting)
       run: |
         export CHEF_LICENSE=accept-silent
