--- a/.github/workflows/chef-unit-tests.yml
+++ b/.github/workflows/chef-unit-tests.yml
@@ -21,22 +21,20 @@ jobs:
     - name: Run RuboCop (linting)
       run: |
         export CHEF_LICENSE=accept-silent
-        bundle install
-
-    - name: Run RuboCop (linting)
-      run: |
-        export CHEF_LICENSE=accept-silent
         chef exec rubocop --display-cop-names --extra-details
       continue-on-error: true
     
     - name: Run ChefSpec unit tests
       run: |
         export CHEF_LICENSE=accept-silent
+        export PATH=/opt/hostedtoolcache/Ruby/3.1.7/x64/bin:$PATH
+        find /opt -name chef -type f
         chef exec rspec spec/unit/recipes/alert_rules_spec.rb --format documentation --color
     
     - name: Run all unit tests
       run: |
         export CHEF_LICENSE=accept-silent
+        export PATH=/opt/hostedtoolcache/Ruby/3.1.7/x64/bin:$PATH
         chef exec rspec --format documentation --color
     
     - name: Upload test results
